fixed uvm monitor warnings and false assert failure

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,9 @@
     "verilog.linting.xvlog.arguments": "-L uvm",
     "verilog.linting.xvlog.includePath": [
         "${workspaceFolder}/*"
-    ]
+    ],
+
+    "files.watcherExclude": {
+        "${workspaceFolder}/CPUDesign*/**": true
+    }
 }
