--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,8 @@
         "${workspaceFolder}/CPUDesign*/**": true
     },
     
-    "files.eol": "\r\n"
+    "files.eol": "\r\n",
+    "files.associations": {
+        "vector": "cpp"
+    }
 }
