small config updates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "verilog.linting.linter": "xvlog",
     "verilog.linting.xvlog.arguments": "-L uvm",
     "verilog.linting.xvlog.includePath": [
-        "."
+        "./projectHeaders"
     ],
 
     "files.watcherExclude": {
@@ -11,6 +11,7 @@
     
     "files.eol": "\r\n",
     "files.associations": {
-        "vector": "cpp"
+        "vector": "cpp",
+        "complex": "cpp"
     }
 }
