--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "verilog.linting.linter": "xvlog",
     "verilog.linting.xvlog.arguments": "-L uvm",
     "verilog.linting.xvlog.includePath": [
-        "./projectHeaders"
+        "./projectHeaders",
+        "./sim/seqItems"
     ],
 
     "files.watcherExclude": {
