update (backend test 0 still WIP)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,8 @@
     
     "files.eol": "\r\n",
     "files.associations": {
-        "vector": "cpp",
-        "complex": "cpp"
+      "vector": "cpp",
+      "complex": "cpp",
+      "ostream": "cpp"
     }
 }
