--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
     "files.associations": {
       "vector": "cpp",
       "complex": "cpp",
-      "ostream": "cpp"
+      "ostream": "cpp",
+      "random": "cpp"
     }
 }
